# android-log-decrypt

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cipher.rs  encryped_log.rs  encrypted_log.rs  lib.rs  main.rs
src/encrypted_log/: header.rs
