[package]
name = "android-log-decrypt"
description = "Decrypt Android logs"
license = "MIT"
repository = "https://github.com/PaulmannLighting/android-log-decrypt"
keywords = ["android", "log", "decrypt"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.4.6", features = ["derive"] }
clap-stdin = "0.2.1"
env_logger = "0.10.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.20"
rpassword = "7.3.1"
sha2 = "0.10.8"
