[package]
name = "android-log-decrypt"
description = "Decrypt Android logs"
license = "MIT"
repository = "https://github.com/PaulmannLighting/android-log-decrypt"
keywords = ["android", "log", "decrypt"]
categories = ["command-line-utilities"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.9.0-pre"
anyhow = "1.0.81"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4.3"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
